# remage-fcp-extension

FCPSims/: CMakeLists.txt  README.md  fcp_main.cc
FCPSims/include/: FCPPairProductionModel.hh  delete.md
FCPSims/src/: FCPIonisation.cc  G4FCPPlus.cc  PhysicsList.cc  delete.md
example/: README.md
fcp-simulations/: README.md  fcp_main.cc
fcp-simulations/Example/: L200_Det_Radii_Pos.xlsx  README.md  Sensitivity_Plot_Tutorial.ipynb  Tutorial_PostProcessing.ipynb  detector_list.txt  l200_fcp_macro.txt
fcp-simulations/include/: CLI11.hpp
fcp-simulations/src/: FCPMultipleScattering.cc  G4FCPMinus.cc
